unpackaged/main/default/objects/Mass_Email__c/fields/Date_To_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Date_To_Send_Email__c</fullName>
    <description>Date to send emails</description>
    <label>Date To Send Email</label>
    <type>DateTime</type>
</CustomField>