unpackaged/main/default/objects/Mass_Email__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description>Determines email template to send to customers</description>
    <label>Template Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Carrier Administered</fullName>
            </value>
            <value>
                <fullName>State Continuation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>